--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -64,10 +64,10 @@ $browser-context: 16;
   @return #{$pixels/$context}em;
 }
 
-$small-breakpoint: 736px !default; //iphone 6+
+$small-breakpoint: 740px !default; //iphone 6+
 $medium-breakpoint:  1224px !default; // Med screens
 $large-breakpoint:  1824px !default; //Large screens
-$xlarge-breakpoint: em(1920) !default;
+// $xlarge-breakpoint: em(1920) !default;
 
 @mixin respond-to($media) {
   @if $media == handhelds {
@@ -77,7 +77,7 @@ $xlarge-breakpoint: em(1920) !default;
     @media only screen and (max-width: $small-breakpoint) and (orientation: landscape) { @content; }
   }
   @else if $media == medium-screens {
-    @media only screen and (min-width: $small-breakpoint) and (max-width: $large-breakpoint), (max-width: $small-breakpoint) and (orientation: landscape) { @content; }
+    @media only screen and (min-width: $small-breakpoint) and (max-width: $large-breakpoint) { @content; }
   }
   @else if $media == wide-screens {
     @media only screen and (min-width: $large-breakpoint) { @content; }
