--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -615,12 +615,13 @@ header {
 	}
 	&__wrapper {
 		@include flex-wrapper;
+		justify-content: space-between;
 		margin: 0 auto 0 auto;
 		height: 100%;
 		width: 100%;
 	}
 	&__item {
-		margin: 0 10px 0 10px;
+		// margin: 0 10px 0 10px;
 		flex: 1;
 	}
 	&__image {
