fix sizing on homepage text

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -603,7 +603,8 @@ header {
 
 .homepage-text {
 	@include center;
-	width: 65%;
+	top: 40%;
+	width: 100%;
 	height: 15%;
 	font-family: 'Harriet Light';
 	position: absolute;
