--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -400,7 +400,8 @@ header {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  width: 65%;
+  top: 40%;
+  width: 100%;
   height: 15%;
   font-family: 'Harriet Light';
   position: absolute;
